# spooky-connect4

./: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  run_python_tests.fish  setup.py  spooky_connect4.pyi
.github/workflows/: lint.yml  publish.yml  test.yml
benches/: benchmarks.rs
src/: bitboard.rs  board.rs  encode.rs  game.rs  lib.rs  limits.rs  move.rs  outcome.rs  position.rs
src/python/: mod.rs  py_board.rs  py_game.rs  py_game_outcome.rs  py_move.rs  symmetry.rs
tests/: test_integration.py
tests/board/: test_board.py
tests/encoding/: test_encoding.py
tests/game/: test_game.py  test_game_encoding.py
tests/move/: test_move.py
