[package]
name = "spooky_connect4"
version = "0.5.0"
edition = "2021"
description = "Connect4 board game engine"
license = "MIT"
repository = "https://github.com/snowdrop4/spooky-connect4"
include = ["src/**/*.rs", "benches/**/*.rs", "Cargo.toml", "README.md", "LICENSE.md"]

[lib]
name = "spooky_connect4"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
paste = "1.0"
numpy = { version = "0.28", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.0"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]

[features]
default = []
python = ["pyo3", "numpy"]
bench = []

[lints.clippy]
unwrap_used = "deny"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
